--- a/Unstickd/Components/Layout/EmptyLayout.razor
+++ b/Unstickd/Components/Layout/EmptyLayout.razor
@@ -4,8 +4,8 @@
     @Body
 </div>
 
-<div id="blazor-error-ui" data-nosnippet>
+<div id="blazor-error-ui" data-nosnippet style="display: none; position: fixed; bottom: 0; left: 0; right: 0; padding: 1rem; background: #b32121; color: white; z-index: 1000;">
     An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
-    <span class="dismiss">🗙</span>
+    <a href="." class="reload" style="color: white; text-decoration: underline;">Reload</a>
+    <span class="dismiss" style="cursor: pointer; margin-left: 1rem;">🗙</span>
 </div>
